crates/check_cli/tests/snapshots/main_cases_handle_astro_files/check_stdin_write_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
---
import {a as a} from 'mod';
import {    something } from "file.astro";
debugger;
statement ( ) ;
var foo: string = "";
---
<div></div>
```

# Emitted Messages

```block
---
import { something } from "file.astro";
import { a } from "mod";

debugger;
statement();
var foo: string = "";
---
<div></div>
```
