crates/check_cli/tests/snapshots/main_cases_handle_astro_files/does_not_throw_parse_error_for_return.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.astro`

```astro
---
const foo = true;
if (foo) {
    return "Something";
}

---
<div></div>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
