crates/check_cli/tests/snapshots/main_cases_handle_astro_files/format_astro_carriage_return_line_feed_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.astro`

```astro
---
  const a    = "b";
---
<div></div>
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.astro format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   ---␍
    2   │ - ··const·a····=·"b";␍
      2 │ + const·a·=·"b";
    3 3 │   ---␍
    4 4 │   <div></div>
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
