crates/check_cli/tests/snapshots/main_cases_handle_astro_files/format_astro_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.astro`

```astro
---
import {    something } from "file.astro";

statement ( ) ;

---
<div></div>
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.astro format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   ---
    2   │ - import·{····something·}·from·"file.astro";
      2 │ + import·{·something·}·from·"file.astro";
    3 3 │   
    4   │ - statement·(·)·;
    5   │ - 
      4 │ + statement();
    6 5 │   ---
    7 6 │   <div></div>
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
