crates/check_cli/tests/snapshots/main_cases_handle_astro_files/format_empty_astro_files_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.astro`

```astro
<div></div>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. No fixes applied.
```
