crates/check_cli/tests/snapshots/main_cases_handle_astro_files/format_stdin_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
---
import {    something } from "file.astro";

statement ( ) ;

---
<div></div>
```

# Emitted Messages

```block
---
import { something } from "file.astro";

statement();
---
<div></div>
```
