crates/check_cli/tests/snapshots/main_cases_handle_astro_files/lint_and_fix_astro_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.astro`

```astro
---
---
<div></div>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
