crates/check_cli/tests/snapshots/main_cases_handle_astro_files/lint_astro_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.astro`

```astro
---
debugger;
---
<div></div>
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.astro:2:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
    1 │ ---
  > 2 │ debugger;
      │ ^^^^^^^^^
    3 │ ---
    4 │ <div></div>
  
  i Unsafe fix: Remove debugger statement
  
    1   │ - 
    2   │ - debugger;
      1 │ + 
    3 2 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
